feat: Planning on relational data model complete.