@@ -1,4 +1,4 @@
-package de.bausdorf.simcacing.tt.planning.model;
+package de.bausdorf.simcacing.tt.planning.persistence;
 
 /*-
  * #%L
@@ -23,14 +23,13 @@ package de.bausdorf.simcacing.tt.planning.model;
  */
 
 import java.time.Duration;
+import java.time.OffsetDateTime;
 import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.Arrays;
-import java.util.Optional;
+import java.util.List;
 
+import de.bausdorf.simcacing.tt.planning.PlanParameterRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Import;
@@ -40,8 +39,7 @@ import org.springframework.security.oauth2.client.registration.InMemoryClientReg
 import org.springframework.security.oauth2.core.AuthorizationGrantType;
 
 import de.bausdorf.simcacing.tt.planning.PlanningTools;
-import de.bausdorf.simcacing.tt.planning.RacePlanRepository;
-import de.bausdorf.simcacing.tt.planning.model.PlanningIssuesIntegrationTest.TestConfig;
+import de.bausdorf.simcacing.tt.planning.persistence.PlanningIssuesIntegrationTest.TestConfig;
 import de.bausdorf.simcacing.tt.web.security.TtClientRegistrationRepository;
 import lombok.extern.slf4j.Slf4j;
 
@@ -53,7 +51,7 @@ class PlanningIssuesIntegrationTest {
 	static class TestConfig {
 		@Bean
 		static ClientRegistrationRepository clientRegistrationRepository() {
-			return new InMemoryClientRegistrationRepository(Arrays.asList(
+			return new InMemoryClientRegistrationRepository(List.of(
 					ClientRegistration
 							.withRegistrationId("google")
 							.authorizationGrantType(AuthorizationGrantType.AUTHORIZATION_CODE)
@@ -69,17 +67,17 @@ class PlanningIssuesIntegrationTest {
 	TtClientRegistrationRepository clientRegistrationRepository;
 
 	@Autowired
-	RacePlanRepository planRepository;
+	PlanParameterRepository planRepository;
 
 	@Test
 	void test_wrong_index_in_planned_stints() {
-		RacePlanParameters planParameters = planRepository.findById("faf22813-9ee3-4190-a0fc-02c6e26c77e6").orElseThrow(IllegalArgumentException::new);
-		log.info("Loaded plan timezone    : {}", planParameters.getSessionStartTime().getZone().getId());
+		PlanParameters planParameters = planRepository.findById("faf22813-9ee3-4190-a0fc-02c6e26c77e6").orElseThrow(IllegalArgumentException::new);
+		log.info("Loaded plan timezone    : {}", ZoneId.ofOffset("", planParameters.getSessionStartDateTime().getOffset()));
 		log.info("System default time zone: {}", ZoneId.of("UTC"));
-		RacePlanParameters serverZonedRacePlan = new RacePlanParameters(planParameters, ZoneId.of("UTC"));
-		log.info("Converted start time    : {}", serverZonedRacePlan.getSessionStartTime().toString());
+		PlanParameters serverZonedRacePlan = new PlanParameters(planParameters);
+		log.info("Converted start time    : {}", serverZonedRacePlan.getSessionStartDateTime().toString());
 
-		ZonedDateTime from = serverZonedRacePlan.getSessionStartTime();
+		OffsetDateTime from = serverZonedRacePlan.getSessionStartDateTime();
 		for( int i = 1; i < 24; i++) {
 			from = from.plus(Duration.ofMinutes(59));
 			int index = PlanningTools.stintIndexAt(from, serverZonedRacePlan.getStints());
